--- a/pom.xml
+++ b/pom.xml
@@ -11,8 +11,8 @@
     <groupId>com.fitness</groupId>
     <artifactId>fitness</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>Fitness</name>
-    <description>Projeto Fitness</description>
+    <name>fitness</name>
+    <description>Projeto Fitness API</description>
     <properties>
         <java.version>17</java.version>
     </properties>
