--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,15 @@
 spring.application.name=Fitness
 
-# Database configuration for Railway (using environment variables)
-spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:h2:mem:fitnessdb}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:sa}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:password}
-spring.datasource.driver-class-name=${SPRING_DATASOURCE_DRIVER_CLASS_NAME:org.h2.Driver}
+# Database configuration for Railway / Postgres
+# Prioridade das variáveis (da esquerda para a direita):
+# 1) SPRING_DATASOURCE_* (se você definiu manualmente no Railway)
+# 2) JDBC_DATABASE_URL (ex.: Heroku)
+# 3) Variáveis do add-on do Railway Postgres (PGHOST/PGPORT/PGDATABASE/PGUSER/PGPASSWORD)
+# 4) Defaults locais (localhost)
+spring.datasource.url=${SPRING_DATASOURCE_URL:${JDBC_DATABASE_URL:jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:fitnessdb}?sslmode=require}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${PGUSER:postgres}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${PGPASSWORD:password}}
+spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
@@ -13,5 +18,12 @@ spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
 
-# Port configuration
+# HikariCP (opcional)
+spring.datasource.hikari.maximum-pool-size=${DB_POOL_SIZE:5}
+
+# Port configuration (Railway define PORT)
 server.port=${PORT:8080}
+
+# Logs úteis para diagnosticar conexão
+logging.level.org.hibernate.SQL=DEBUG
+logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
