Fix: force HikariCP to use the correct jdbc-url and driver to prevent 'Driver claims to not accept jdbcUrl' error

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,15 @@
 spring.application.name=Fitness
 
 # Database configuration for Railway / Postgres
-# 1) SPRING_DATASOURCE_*
-# 2) JDBC_DATABASE_URL
-# 3) PGHOST/PGPORT/PGDATABASE/PGUSER/PGPASSWORD
-# 4) Defaults locais (localhost)
+# Priorizamos variáveis do Railway e forçamos sslmode=require para evitar erros de conexão
 spring.datasource.url=${SPRING_DATASOURCE_URL:${JDBC_DATABASE_URL:jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:fitnessdb}?sslmode=require}}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${PGUSER:postgres}}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${PGPASSWORD:password}}
 spring.datasource.driver-class-name=org.postgresql.Driver
+
+# Forçar o Hikari a usar a URL correta e não tentar carregar valores padrão de exemplo
+spring.datasource.hikari.jdbc-url=${spring.datasource.url}
+spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
