Fix: add support for POSTGRES_DB and other common Railway environment variable names to backend

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,9 +2,10 @@ spring.application.name=Fitness
 
 # Database configuration for Railway / Postgres
 # Priorizamos variáveis do Railway e forçamos sslmode=require para evitar erros de conexão
-spring.datasource.url=${SPRING_DATASOURCE_URL:${JDBC_DATABASE_URL:jdbc:postgresql://${PGHOST:localhost}:${PGPORT:5432}/${PGDATABASE:fitnessdb}?sslmode=require}}
-spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${PGUSER:postgres}}
-spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${PGPASSWORD:password}}
+# Adicionamos suporte a variações comuns como POSTGRES_DB (usado no add-on do Railway)
+spring.datasource.url=${SPRING_DATASOURCE_URL:${JDBC_DATABASE_URL:jdbc:postgresql://${PGHOST:${POSTGRES_HOST:localhost}}:${PGPORT:${POSTGRES_PORT:5432}}/${PGDATABASE:${POSTGRES_DB:fitnessdb}}?sslmode=require}}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${PGUSER:${POSTGRES_USER:postgres}}}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${PGPASSWORD:${POSTGRES_PASSWORD:password}}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # Forçar o Hikari a usar a URL correta e não tentar carregar valores padrão de exemplo
