Fix build: resolve MalformedInputException by removing non-ASCII characters in application.properties

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,14 @@
 spring.application.name=Fitness
 
 # Database configuration for Railway / Postgres
-# Priorizamos variáveis do Railway e forçamos sslmode=require para evitar erros de conexão
-# Adicionamos suporte a variações comuns como POSTGRES_DB (usado no add-on do Railway)
+# Priorizamos variaveis do Railway e forcamos sslmode=require para evitar erros de conexao
+# Adicionamos suporte a variacoes comuns como POSTGRES_DB (usado no add-on do Railway)
 spring.datasource.url=${SPRING_DATASOURCE_URL:${JDBC_DATABASE_URL:jdbc:postgresql://${PGHOST:${POSTGRES_HOST:localhost}}:${PGPORT:${POSTGRES_PORT:5432}}/${PGDATABASE:${POSTGRES_DB:fitnessdb}}?sslmode=require}}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:${PGUSER:${POSTGRES_USER:postgres}}}
 spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:${PGPASSWORD:${POSTGRES_PASSWORD:password}}}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-# Forçar o Hikari a usar a URL correta e não tentar carregar valores padrão de exemplo
+# Forcar o Hikari a usar a URL correta e nao tentar carregar valores padrao de exemplo
 spring.datasource.hikari.jdbc-url=${spring.datasource.url}
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 
