Fix: force database schema reset and add detailed login debug logs to resolve authentication failures

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,7 +15,7 @@ spring.datasource.hikari.password=${spring.datasource.password}
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
