debug: log database URL and force schema creation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,12 +15,13 @@ spring.datasource.hikari.password=${spring.datasource.password}
 spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 
 # JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=true
+spring.jpa.defer-datasource-initialization=false
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
+spring.jpa.generate-ddl=true
 
 # HikariCP
 spring.datasource.hikari.maximum-pool-size=${DB_POOL_SIZE:5}
