--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,6 +22,7 @@ spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
 spring.jpa.generate-ddl=true
+spring.jpa.properties.hibernate.default_schema=public
 
 # HikariCP
 spring.datasource.hikari.maximum-pool-size=${DB_POOL_SIZE:5}
