chore: force postgres platform for sql init in railway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.sql.init.continue-on-error=true
 spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.default_schema=public
+spring.sql.init.platform=postgres
 
 # HikariCP
 spring.datasource.hikari.maximum-pool-size=${DB_POOL_SIZE:5}
