--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,13 +17,16 @@ spring.datasource.hikari.driver-class-name=org.postgresql.Driver
 # JPA/Hibernate
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.defer-datasource-initialization=false
+spring.jpa.defer-datasource-initialization=true
 spring.sql.init.mode=always
 spring.sql.init.continue-on-error=true
 spring.jpa.properties.hibernate.dialect=${SPRING_JPA_PROPERTIES_HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.default_schema=public
 spring.sql.init.platform=postgres
+# Forcar a execucao de scripts em bancos reais
+spring.sql.init.username=${spring.datasource.username}
+spring.sql.init.password=${spring.datasource.password}
 
 # HikariCP
 spring.datasource.hikari.maximum-pool-size=${DB_POOL_SIZE:5}
